fix spacing problem in carousel on mobile

--- a/client/sass/_carousel.scss
+++ b/client/sass/_carousel.scss
@@ -82,6 +82,8 @@
 
             .card-body {
                 flex: 1;
+                display: flex;
+                flex-direction: column;
 
                 .card-title {
                     display           : -webkit-box;
